# ocrstudio

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG_IMAGE_FORMATS.md  CONTRIBUTING.md  DOCUMENTATION_ORGANIZED.md  Dockerfile  Dockerfile.web  FIX_ANNOTATION_LOSS.md  README.md  WEB.md  WORKSPACE_IMPROVEMENTS.md  app_config.json  docker-compose.gpu.yml  docker-compose.web.gpu.yml  docker-compose.web.pull.yml  docker-compose.web.yml  docker-compose.yml  install.bat  install.sh  main.py  migrate_annotation_keys.py  pyproject.toml  recent_workspaces.json  recover_annotations.py  requirements-dev.txt  requirements-server.txt  requirements-test.txt  requirements-web.txt  requirements.txt  run.bat  run.sh  setup.py  test_restructure.py  test_stable_keys.py
.github/workflows/: ci.yml  release.yml
config/: config.yaml  default.yaml  paths.yaml
config/profiles/: cpu.yaml  gpu.yaml
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  CHANGELOG_workspace_improvements.md  PADDLEOCR_CONFIG_GUIDE.md  PRIORITY3_FEATURES.md  PROJECT_STRUCTURE.md  README_RESTRUCTURE.md  WEB.md
docs/restructure/: CLEANUP_GUIDE.md  DATA_SAFETY_GUIDE.md  FINAL_RESTRUCTURE_REPORT.md  MIGRATION_CHECKLIST.md  MIGRATION_STATUS.md  OVERALL_PROGRESS_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE3_COMPLETE.md  PHASE3_PLAN.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_7_COMPLETE.md  PHASE6_SUMMARY.md  PHASE8_COMPLETE.md  README.md  RESTRUCTURE_FINAL_REPORT.md  RESTRUCTURE_PLAN.md  RESTRUCTURE_PROGRESS_UPDATE.md  RESTRUCTURE_SUMMARY.md  SESSION_SUMMARY_PHASE3_4.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  controller.ts  i18n.ts  main.tsx  theme.ts  types.ts
frontend/src/__tests__/: editor.test.ts  i18n.test.ts  masks.test.ts  select.test.ts
frontend/src/api/: client.ts  queryClient.ts
frontend/src/components/: AnnotationPanel.tsx  CanvasStage.tsx  Header.tsx  ImageList.tsx  VersionMenu.tsx  WorkspacePicker.tsx
frontend/src/hooks/: queries.ts  useAutosave.ts  useShortcuts.ts
frontend/src/lib/: masks.ts  select.ts
frontend/src/store/: editor.ts
models/textline_orientation/: inference.pdiparams
modules/: __version__.py  augmentation.py  cli.py  config_loader.py  constants.py  data_splitter.py  detector.py  logger.py  textline_orientation.py  utils.py  workspace_manager.py
modules/config/: __init__.py  manager.py
modules/core/: __init__.py  app_state.py  services.py  undo_redo.py
modules/core/ocr/: __init__.py  detector.py  (+1 more)
modules/data/: __init__.py  splitter.py  writer.py
modules/export/: __init__.py  base.py  detection.py  recognition.py  utils.py
modules/gui/: base_annotation_item.py  box_item.py  canvas_view.py  main_window.py  mask_handler.py  mask_item.py  polygon_item.py  settings_dialog.py  split_config_dialog.py  styles.py  ui_components.py  ui_coordinator.py  version_manager_dialog.py  workspace_selector_dialog.py
modules/utils/: __init__.py  decorators.py  file_io.py  image.py  validation.py
scripts/: check_image_support.py  migrate_annotation_keys.py  migrate_to_workspace.py  recover_annotations.py
server/: __init__.py  deps.py  jobs.py  main.py  schemas.py
server/routers/: annotations.py  config.py  detect.py  export.py  images.py  jobs.py  versions.py  workspaces.py
server/services/: __init__.py  export_augment.py  export_service.py  export_split.py  image_service.py
tests/: conftest.py  test_api_server.py
tests/unit/: test_config_manager.py  test_file_io.py  test_main_window_smoke.py  test_undo_redo.py  test_validation.py  test_workspace_manager.py
(+43 files in other folders)
